--- a/proyectos/templates/nuevo_proyecto.html
+++ b/proyectos/templates/nuevo_proyecto.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
-{% block content %}
-<h2>Nuevo Proyecto</h2>
+{% load crispy_forms_tags %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-success">Guardar</button>
-    <a href="{% url 'proyectos:panel' %}" class="btn btn-secondary">Cancelar</a>
-</form>
+{% block content %}
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-lg-8 mx-auto">
+            <div class="card shadow">
+                <div class="card-header bg-primary text-white">
+                    <h2 class="mb-0">Nuevo Proyecto</h2>
+                </div>
+                <div class="card-body">
+                    {% crispy form %}
+                    <div class="mt-3">
+                        <a href="{% url 'proyectos:panel' %}" class="btn btn-secondary">Cancelar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
