--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>La Casa de la Pradera</title>
+    <link rel="icon" href="data:,">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/sidebar.css' %}">
@@ -52,7 +53,6 @@
         <div class="header-left">
             <span class="badge badge--muted">Entorno</span>
         </div>
-        {% if request.user.is_authenticated and request.path != '/usuarios/login/' and request.path != '/accounts/login/' %}
         <div class="header-actions">
             <a class="btn btn--ghost" href="{% url 'comunicacion:conversations_list' %}">Conversaciones</a>
             <a class="btn btn--ghost" href="{% url 'personal:mis_notificaciones' %}">
@@ -64,7 +64,6 @@
             <span class="badge badge--muted">{{ request.user.first_name }} {{ request.user.last_name }}</span>
             <a href="{% url 'usuarios:logout' %}" class="btn btn--primary">Cerrar sesión</a>
         </div>
-        {% endif %}
     </header>
 
     <main class="app-content">
