mejorado color mensaje enivar solicitud y quitada vista jefe GEstion de proyectos

--- a/comunicacion/templates/comunicacion/enviar_solicitud.html
+++ b/comunicacion/templates/comunicacion/enviar_solicitud.html
@@ -4,6 +4,7 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/forms.css' %}">
+<link rel="stylesheet" href="{% static 'css/comunicacion/comunicacion.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -15,7 +16,7 @@
     <div class="row">
         <div class="col-lg-8 mx-auto">
             <div class="card shadow">
-                <div class="card-header bg-info text-white">
+                <div class="card-header solicitud-header">
                     <h3 class="mb-0">Enviar Solicitud</h3>
                     <p class="mb-0 mt-2" style="font-size: 0.9rem; opacity: 0.9;">Solicita recursos, permisos o asistencia</p>
                 </div>
